refined some css and it now no longer shifts

--- a/styles/eggImage.module.scss
+++ b/styles/eggImage.module.scss
@@ -1,10 +1,8 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
-  margin: 0;
-  padding: 0;
   position: relative;
 }
 .mainImage {
@@ -12,6 +10,7 @@
 }
 .rarityImage {
   position: absolute;
+  object-fit: cover;
   bottom: 5px;
   left: 50;
 }
