--- a/styles/gacha.module.scss
+++ b/styles/gacha.module.scss
@@ -1,21 +1,16 @@
 .container {
   background-color: var(--main-color);
   border-radius: 15px;
-  margin: 2rem;
-  padding: 2rem;
   color: var(--text-color);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: relative;
-  overflow: hidden;
+  min-width: 30%;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
-.eggImageContainer {
-  height: 197px;
-  .eggImage {
-  }
-}
+
 .rollButton {
   border: none;
   font-family: inherit;
